[gd_scene load_steps=4 format=3 uid="uid://w0bouaxdh8jp"]

[ext_resource type="Script" path="res://scenes/preview.gd" id="1_r6ckw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qqi4"]
bg_color = Color(1, 1, 1, 0.490196)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0gqx"]
bg_color = Color(1, 0.792157, 0.380392, 1)
border_width_left = 10
border_width_top = 5
border_width_right = 10
border_width_bottom = 5
border_color = Color(1, 0.792157, 0.380392, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Preview" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3qqi4")
script = ExtResource("1_r6ckw")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0.707107, -0.5, -0.5, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -2)

[node name="Node3D" type="Node3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Timer" type="Timer" parent="SubViewportContainer/SubViewport"]
wait_time = 0.25
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i0gqx")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[connection signal="mouse_entered" from="." to="." method="activate_mouse_controls"]
[connection signal="mouse_exited" from="." to="." method="deactivate_mouse_controls"]
[connection signal="timeout" from="SubViewportContainer/SubViewport/Timer" to="." method="increase_frame"]
